syntax = "proto3";

package flowpipe.v1;

option go_package = "github.com/hurdad/flow-pipe/gen/go/flowpipe/v1;flowpipev1";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "flowpipe/v1/flow.proto";

// ============================================================
// Flow Control Plane API
// ============================================================
//
// This service is declarative and idempotent.
// gRPC is the source of truth.
// REST is provided via grpc-gateway annotations.
//

service FlowService {

  // Create a new flow (version starts at 1).
  rpc CreateFlow(CreateFlowRequest) returns (Flow) {
    option (google.api.http) = {
      post: "/v1/flows"
      body: "spec"
    };
  }

  // Update an existing flow (creates a new version).
  rpc UpdateFlow(UpdateFlowRequest) returns (Flow) {
    option (google.api.http) = {
      put: "/v1/flows/{name}"
      body: "spec"
    };
  }

  // Delete a flow and tear down its runtime.
  rpc DeleteFlow(DeleteFlowRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/flows/{name}"
    };
  }

  // Get the active version of a flow.
  rpc GetFlow(GetFlowRequest) returns (Flow) {
    option (google.api.http) = {
      get: "/v1/flows/{name}"
    };
  }

  // List all flows.
  rpc ListFlows(ListFlowsRequest) returns (ListFlowsResponse) {
    option (google.api.http) = {
      get: "/v1/flows"
    };
  }

  // Get status only (fast path, no spec mutation).
  rpc GetFlowStatus(GetFlowStatusRequest) returns (FlowStatus) {
    option (google.api.http) = {
      get: "/v1/flows/{name}/status"
    };
  }

  // Roll back to a previous immutable version.
  rpc RollbackFlow(RollbackFlowRequest) returns (Flow) {
    option (google.api.http) = {
      post: "/v1/flows/{name}/rollback/{version}"
    };
  }
}

// ============================================================
// Schema Registry API
// ============================================================

service SchemaRegistryService {

  // Create a new schema (version starts at 1).
  rpc CreateSchema(CreateSchemaRequest) returns (SchemaDefinition) {
    option (google.api.http) = {
      post: "/v1/schemas"
      body: "schema"
    };
  }

  // Get a schema by schema id and version.
  rpc GetSchema(GetSchemaRequest) returns (SchemaDefinition) {
    option (google.api.http) = {
      get: "/v1/schemas/{schema_id}/versions/{version}"
    };
  }

  // List schema versions for a schema id.
  rpc ListSchemaVersions(ListSchemaVersionsRequest) returns (ListSchemaVersionsResponse) {
    option (google.api.http) = {
      get: "/v1/schemas/{schema_id}/versions"
    };
  }

  // Delete all schema versions for a schema id.
  rpc DeleteSchema(DeleteSchemaRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/schemas/{schema_id}"
    };
  }
}

// ============================================================
// Requests / Responses
// ============================================================

message CreateFlowRequest {
  FlowSpec spec = 1;
}

message UpdateFlowRequest {
  string name = 1;
  FlowSpec spec = 2;
}

message DeleteFlowRequest {
  string name = 1;
}

message GetFlowRequest {
  string name = 1;
}

message ListFlowsRequest {}

message FlowSummary {
  string name = 1;
  FlowStatus status = 2;
}

message ListFlowsResponse {
  repeated FlowSummary flows = 1;
}

message GetFlowStatusRequest {
  string name = 1;
}

message RollbackFlowRequest {
  string name = 1;
  uint64 version = 2;
}

message SchemaDefinition {
  // Schema identifier.
  string schema_id = 1;

  // Schema version in the registry.
  uint32 version = 2;

  // Schema format identifier.
  InMemorySchemaFormat format = 3;

  // Raw schema payload.
  bytes raw_schema = 4;
}

message CreateSchemaRequest {
  SchemaDefinition schema = 1;
}

message GetSchemaRequest {
  string schema_id = 1;
  uint32 version = 2;
}

message ListSchemaVersionsRequest {
  string schema_id = 1;
}

message ListSchemaVersionsResponse {
  repeated SchemaDefinition schemas = 1;
}

message DeleteSchemaRequest {
  string schema_id = 1;
}
